// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary w/ 1 expense 1`] = `
<div>
  <h1>
    1
     
    expense
     totalling 
    33
    €
  </h1>
</div>
`;

exports[`should render ExpensesSummary w/ multiple expenses 1`] = `
<div>
  <h1>
    3
     
    expenses
     totalling 
    331
    €
  </h1>
</div>
`;
